# bitchatKmp

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
apps/desktop/: build.gradle.kts
apps/droid/: build.gradle.kts
apps/embedded/: EMBEDDED_NOTES.md  README.md  build.gradle.kts
data/cache/: build.gradle.kts
data/crypto/: build.gradle.kts  crypto.podspec
data/mediautils/: build.gradle.kts
data/noise/: build.gradle.kts
data/remote/tor/native/arti-desktop-wrapper/: Cargo.toml
data/remote/tor/native/arti-desktop-wrapper/src/: lib.rs
data/remote/tor/native/arti-ios-wrapper/: Cargo.toml  arti_ios.h  arti_macos.h
data/remote/tor/native/arti-ios-wrapper/src/: lib.rs
data/repo/: build.gradle.kts
docker/: Dockerfile.linux-arm64-cross
docs/: FORKED_LIBRARIES.md  meshcore-orangepi-setup.md  meshtastic-orangepi-setup.md
domain/: build.gradle.kts
firmware/rangepi-lora/: README.md  VERIFY.md  e22_truth_probe.py  main.py  platformio.ini  rangepi_beacon_test.py  rangepi_configuration.py  test_e22_config.py
firmware/teensy-lora/: README.md  platformio.ini
gradle/: libs.versions.toml
iosdi/: build.gradle.kts
presentation/design/: build.gradle.kts
presentation/screens/: build.gradle.kts
presentation/viewmodel/: build.gradle.kts
presentation/viewvo/: build.gradle.kts
scripts/: LORA_TESTING.md  build-all-android.sh  build-all-desktop.sh  build-all-ios.sh  build-all-linux.sh  build-all-platforms.sh  build-native-linux-arm64.sh  dio0_test.py  gpio_discover.sh  gpio_monitor.py  lora_test.py  meshtastic_send.py  show_noise_test.sh
scripts/cardkb/: cardkb-driver.py  (+2 more)
(+892 files in other folders)
